fix: adjust css to fix frame size not responsive

--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,9 @@
 /* global div.external-video should be controlled in settings */
 div.external-video,
 div.local-media {
-  min-height: 360px;
-  min-width: 400px;
+  min-height: 16em;
+  min-width: 350px;
+  max-width: 100%;
   height: 40vh;
   margin: auto;
 }
